# todor

./: .gitignore  Cargo.toml  Cross.toml  run
config/: config.toml.example
crosscompiler/: Dockerfile
src/: commands.rs  google_calendar_client.rs  google_scheduler.rs  main.rs  schedule_colorer.rs  schedule_formatter.rs  schedule_trait.rs  scheduled_item.rs  todoist_client.rs  todoist_scheduler.rs
src/display/: mod.rs  prompt_window.rs  schedule_selection_window.rs  schedule_window.rs  window_stack.rs
src/tasks/: command_executor.rs  master_scheduler.rs  mod.rs  schedule_refresh.rs  user_input_task.rs
