[package]
name = "todor"
version = "0.1.0"
authors = ["Lucas Taylor <lucas@perfectlunacy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# All this for gcal... sheesh
google-calendar3 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"

# And this for todoist
restson = "0.6.0"
serde_derive = "^1.0"

# Terminal control
termion = "1.5.6"

# Date parsing
date_time_parser = "0.1.1"
event_parser = "0.1.1"

# Easier result handling
anyhow ="1.0.44"

# Logging
log = "0.4"
simplelog = "^0.7.4"

# Time handling
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }

# Regex, cause, you know. Regex
regex = "1"
lazy_static = "1.4.0"  # Helps us to only compile Regex patterns once

# Text formatting
colored = "1.9.3"

# Merging iterators and all that jazz
itertools = "0.9.0"

# TOML config parsing
toml = "0.5.6"